fix dark mode
fix viewport for tablet

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,6 @@
 @import "tailwindcss";
 
-@variant dark {
-  &:where(.dark, .dark *)
-}
+@custom-variant dark (&:where(.dark, .dark *));
 
 :root {
   color-scheme: light;
